feat: add Express API for initiating swaps and update package dependencies
- Implemented a new Express server in index.js to handle swap initiation requests.
- Added a POST endpoint '/api/swap/initiate' to interact with the HashTimeLock contract.
- Updated package.json to include express and web3-providers-http as dependencies.

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
- "scripts": {
-  "compile": "truffle compile",
-  "test": "truffle test",
-  "deploy:goerli": "truffle migrate --network goerli",
-  "deploy:bsc": "truffle migrate --network bscTestnet"
-},
+  "scripts": {
+    "compile": "truffle compile",
+    "test": "truffle test",
+    "deploy:goerli": "truffle migrate --network goerli",
+    "deploy:bsc": "truffle migrate --network bscTestnet"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "ethers": "^6.13.5",
-    "web3": "^4.16.0"
+    "express": "^5.1.0",
+    "web3": "^4.16.0",
+    "web3-providers-http": "^4.2.0"
   }
 }
